fix wishlist share modal spacing

--- a/assets/css/wishlist.css
+++ b/assets/css/wishlist.css
@@ -147,6 +147,13 @@
   font-weight: 800 !important;
 }
 
+@media (min-width: 744px)
+{ 
+._1youxq0 {
+    min-height: 64px !important;
+}
+ }
+
 ._12kfhdn {
   padding: 24px !important;
   flex: 1 1 auto !important;
@@ -366,4 +373,10 @@
   font-size: 16px !important;
   line-height: 20px !important;
   color: rgb(34, 34, 34) !important;
+}
+
+._10rf6ea {
+  font-size: 14px !important;
+  line-height: 18px !important;
+  color: rgb(113, 113, 113) !important;
 }
